# blog

./: .dockerignore  .eslintrc.js  .firebaserc  .gitignore  Cargo.toml  Dockerfile  astro.config.mjs  biome.json  build.sh  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  firebase.json  fly.toml  generateRSS.ts  global.css  justfile  next.config.js  package.json  pnpm-lock.yaml  processMarkdown.ts  processPosts.ts  rustfmt.toml  simulation.ts  tsconfig.json
.github/: dependabot.yml
components/: ArticleList.tsx  FullPageOverlay.tsx  NBodySimulation.tsx  Navbar.module.css  Navbar.tsx  OrbitAnimation.module.css  OrbitAnimation.tsx  ScrollProgressBar.tsx  ShareRow.tsx  SignIn.tsx  Spacer.module.css  Spacer.tsx  UserAvatar.tsx  UserStatus.tsx  WebringRow.tsx
crates/generative-art/: Cargo.toml
crates/generative-art/src/: lib.rs
crates/markov/: .gitignore  Cargo.toml  english_source.txt
crates/markov/demo/: index.html  package.json  pnpm-lock.yaml  vite.config.js
crates/markov/demo/src/: Page.jsx  main.jsx
crates/markov/src/: common.rs  lib.rs  main.rs
drizzle/: 0000_careless_miracleman.sql  0001_free_hiroim.sql
pages/: _app.tsx  index.tsx  rebalance.tsx  rss.xml.tsx  userforecast.tsx
posts/: 3_awesome_ways_computers_generate_randomess.md  3_awesome_ways_computers_generate_randomness.md  3_traits_of_good_test_suites.md  LLM_assisted_fuzzing.md  a_case_for_procrastination.md  a_harper_record.md  a_quick_update_on_harper_desktop.md  adding_a_programming_language_to_harper.md  always_think_of_the_hook_first.md  articleId.ts  articles.ts  avoid_complexity.md  better_interfaces_for_grammar_checking.md  blog_cheatsheet.md  brainstorming_a_harper_service.md  build_a_wordle_solver_using_rust.md  building_a_harper_desktop_app.md  building_a_software_render_engine_from_scratch.md  building_a_software_renderer_from_scratch.md  building_software_that_is_good_for_humans.md  building_the_weir_language.md  bypassing_hallucinations_in_llms.md  chatgpt_for_the_moms.md  code_ages_like_milk.md  dealing_with_flaky_tests.md  demos_make_life_worth_living.md  do_not_type_your_notes.md  (+118 more)
(+100 files in other folders)
