[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", default-features = false, features = ["macros", "cookies", "compress-gzip"] }
askama = "0.11.1"
env_logger = "0.9.0"
log = "0.4.17"
minify-html = "0.9.2"
pulldown-cmark = "0.9.1"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
