[package]
name = "markov"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = { version = "0.31.2", features = ["serde-serialize"] }
rmp-serde = "1.1.1"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
wasm-bindgen = "0.2.83"
